src/objects/YS2__Yousign_Signatory__c.object
<CustomObject>
    <fields>
        <fullName>YS2__Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <filterItems>
                <field>Contact.Email</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Contact.Phone</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Contact.MobilePhone</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Yousign Signatories</relationshipLabel>
        <relationshipName>Yousign_Signatories</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>YS2__Email__c</fullName>
        <formula>YS2__Contact__r.Email</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YS2__Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YS2__Phone__c</fullName>
        <formula>IF( ISBLANK( YS2__Contact__r.MobilePhone ) , YS2__Contact__r.Phone, YS2__Contact__r.MobilePhone)</formula>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YS2__Role__c</fullName>
        <label>Role</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Signatory</fullName>
                </value>
                <value>
                    <fullName>Validator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YS2__Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Signed</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YS2__Yousign_Procedure__c</fullName>
        <label>Yousign Procedure</label>
        <referenceTo>YS2__Yousign_Procedure__c</referenceTo>
        <relationshipLabel>Yousign Signatories</relationshipLabel>
        <relationshipName>Yousign_Signatories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>YS2__Yousign_Signatory_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Yousign Signatory Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Yousign Signatory</label>
    <nameField>
        <displayFormat>YS-{00000}</displayFormat>
        <label>Yousign Signatory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Yousign Signatories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>